switch to new metadata system
