# backend/src/database/models/score.ts
@@ -1,4 +1,4 @@
-import { CategoriesStrings, IScoreDeltaMap, IScoreMap, SeverityLevel, TestResult } from '../../lib/data_types';
+import { SeverityLevel, TestResult } from '../../lib/data_types';
 
 
 export const ScoreSchemaObject = {
@@ -49,30 +49,5 @@ export function score(severityLevel: SeverityLevel, status: TestResult): number 
     case SeverityLevel.CRITICAL:
       return scoreForStatus(status, 100)
   }
-}
-
-
-export function calculateScoreDelta(scoreMap: IScoreMap, newResult: TestResult): IScoreDeltaMap {
-  const r: IScoreDeltaMap = {}
-
-  for (const [key, value] of Object.entries(scoreMap)) {
-    const newReached = score(value.SeverityLevel, newResult)
-    const reachedDelta = newReached - value.Reached
-    
-    const newTotal = newResult === TestResult.DISABLED ? 0 : score(value.SeverityLevel, TestResult.STRICTLY_SUCCEEDED)
-    const totalDelta =  newTotal - value.Total
-
-    r[<CategoriesStrings>key] = {
-      TotalDelta: totalDelta,
-      ReachedDelta: reachedDelta
-    }
-
-    const tmp = scoreMap[<CategoriesStrings>key]
-    tmp.Reached += reachedDelta
-    tmp.Total += totalDelta
-    tmp.Percentage = tmp.Reached / tmp.Total * 100
-  }
-
-  return r
 }
 
